--- a/install.txt
+++ b/install.txt
@@ -1,12 +1,7 @@
 need to install:
-- ruby
-- rubygems
-- native extensions (i.e. need xcode/developer tools installed)
+- ruby (installed on osx)
+- rubygems (installed on osx)
 - each ruby gem (sinatra, dm_core, dm_migrations, dm_sqlite_adapter)
-
-to bootstrap:
-- create the sqlite file
-- in irb require the class and run the migrations
 
 to run:
 - $ruby color.rb
